freesia/manifests/n8n/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: n8n
  template:
    metadata:
      labels:
        app.kubernetes.io/name: n8n
    spec:
      containers:
      - name: n8n
        image: n8nio/n8n:latest
        ports:
        - containerPort: 5678
          name: http
        resources:
          requests:
            cpu: 100m
            memory: "250Mi"
          limits:
            cpu: "1"
            memory: "500Mi"
        startupProbe:
          httpGet:
            path: /healthz
            port: 5678
          initialDelaySeconds: 6
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 5678
          initialDelaySeconds: 6
          periodSeconds: 3
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5678
          initialDelaySeconds: 6
          periodSeconds: 3
