freesia/manifests/n8n/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: n8n
  labels:
    app.kubernetes.io/name: n8n
spec:
  serviceName: n8n
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: n8n
  template:
    metadata:
      labels:
        app.kubernetes.io/name: n8n
    spec:
      containers:
      - name: n8n
        image: n8nio/n8n:latest
        ports:
        - containerPort: 5678
          name: http
        resources:
          requests:
            cpu: "500m"
            memory: 500Mi
          limits:
            cpu: "1"
            memory: 1Gi
        livenessProbe:
          httpGet:
            path: /healthz
            port: 5678
          initialDelaySeconds: 6
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 5678
          initialDelaySeconds: 6
          periodSeconds: 3
        volumeMounts:
        - name: data
          mountPath: /home/node/.n8n
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: n8n
