freesia/manifests/n8n/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: n8n
  labels:
    app.kubernetes.io/name: n8n
spec:
  selector:
    app.kubernetes.io/name: n8n
  ports:
  - name: http
    port: 5678
    protocol: TCP
    targetPort: http
