freesia/manifests/n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
spec:
  ingressClassName: "cloudflare-tunnel"
  rules:
  - host: reyvateils.harvestasya.org
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: n8n
            port:
              name: http
