freesia/manifests/n8n/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: n8n
  labels:
    app.kubernetes.io/name: n8n
spec:
  routes:
  - kind: Rule
    match: Host(`n8n.harvestasya.org`)
    services:
    - name: n8n
      port: 5678
